--- a/client/src/App.css
+++ b/client/src/App.css
@@ -33,7 +33,6 @@ body {
   margin: 20px;
   width: 400px;
 }
-
 .form-group {
   display: flex;
   flex-direction: column;
@@ -63,6 +62,7 @@ input {
   text-decoration: none;
 }
 
+
 a {
   color: white;
   text-decoration: none;
@@ -82,6 +82,7 @@ a {
   margin: 20px;
   width: 400px;
 }
+
 .create-list form {
   display: flex;
   flex-direction: column;
@@ -123,4 +124,73 @@ p {
 .finish{
   background-color: white;
   border-radius: 50px;
+}
+.dark-mode {
+  background-color: #1E1E1E;
+  .navbar {
+    margin: 0;
+    width: 100%;
+    height: 80px;
+    background-color: #2E2C2C;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    text-decoration: none;
+  };
+}
+.dark-mode {
+  .create-list {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    background-color: #1E1E1E;
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    margin: 20px;
+    width: 400px;
+  }
+}
+.dark-mode{
+  .authorization-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    background-color: #1E1E1E;
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    margin: 20px;
+    width: 400px;
+  }
+}
+.dark-mode {
+  .authorization {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #1E1E1E;
+  }
+}
+.dark-mode {
+  body {
+    background-color: #1E1E1E;
+    margin: 0;
+    padding: 0;
+  }
+}
+.darkButton {
+  position: absolute;
+  top: 20px;
+  left: 70px;
+  border-radius: 10px;
+  background-color: var(--white);
+  width: 104px;
+  height: 40px;
+  overflow: hidden;
+  cursor: pointer;
 }
